package mode.facade;

/**
 * @Author ws
 * @Date 2021/5/6 19:46
 * @Version 1.0
 */

/**
 * 解决外观模式违背开闭原则
 */
public abstract class Facade {
    public abstract void method1();
    public abstract void method2();
}
