package mode.facade.module;

/**
 * @Author ws
 * @Date 2021/5/6 20:19
 * @Version 1.0
 */
public class System1 {
    public void m(){
        System.out.println("System1");
    }
}
