package mode.facade.module;

/**
 * @Author ws
 * @Date 2021/5/6 20:20
 * @Version 1.0
 */
public class System5 {
    public void m(){
        System.out.println("System5");
    }
}
